<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rosanne.nederlandsapp.MainActivity"
    android:background="@drawable/background1">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView9" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/textView8"
            android:textColor="#fb2428"
            android:textSize="80sp"
            android:text="@string/welkom"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView7"
            android:text="@string/bij"
            android:textSize="80sp"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="#ffffff"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal"
            android:textSize="80sp"
            android:textIsSelectable="true"
            android:text="@string/leer"
            android:textColor="#1e22fa"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView5"
            android:textSize="30sp" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/oef"
            android:id="@+id/buttonOef"
            android:onClick="OefenenClick"
            android:padding="15dp"
            android:background="#da6013" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:textSize="10sp"
            android:textIsSelectable="true" />
        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/toet"
            android:id="@+id/buttonToets"
            android:onClick="ToetsClick"
            android:padding="15dp"
            android:background="#da6013" />
    </LinearLayout>
</RelativeLayout>
